# cpp-static-task-executor

./: CMakeLists.txt  README.md
include/: dynamic_executor.hpp  dynamic_pipeline.hpp  static_executor.hpp  static_pipeline.hpp
tests/: CMakeLists.txt  dynamic_tasks.hpp  executor_benchmark.cpp  pipeline_benchmark.cpp  results.csv  static_tasks.hpp
